2008-04-23 20:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowInspector.gorm: Connected the
	button for "released when closed" button.
	* Palettes/1Windows/GormNSWindow.m: Correction for issue where 
	isReleasedWhenClosed isn't set properly.

2008-04-20 11:47-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInfo.plist: Minor correction to the plist.

2008-04-14 17:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormImageEditor.m
	* GormCore/GormOutlineView.m
	* GormCore/GormResourceManager.m
	* GormCore/GormSoundInspector.m
	* GormCore/GormSplitViewEditor.m
	* GormLib/IBInspectorManager.m
	* Palettes/2Controls/GormBoxAttributesInspector.m
	* Palettes/4Data/GormDateFormatterAttributesInspector.m
	* Palettes/4Data/GormImageViewAttributesInspector.m
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: General
	clean up and compilation fixes to allow Gorm to compile without
	warnings.

2008-04-07 18:59-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist
	* Version: Moved to version 1.2.5.

2008-04-06 22:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 1.2.4
	
2008-04-06 22:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ANNOUNCE
	* ChangeLog
	* Documentation/news.texi
	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist
	* NEWS
	* Version: Updating for release.

2008-03-05 20:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWrapperLoader.m: Correct c99'ism.

2008-02-18 20:31-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormPopUpButtonEditor.m: Change to use helper
	method to set up "preferred edge" correctly.

2008-02-17 12:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m
	* GormCore/GormViewWindow.m: Minor correction to view resizing for
	windowless views to show contents properly.  Still working on