@@ -34,6 +34,13 @@
 	);
 	Super = NSDocument;
     };
+    GormDocumentWindow = {
+	Actions = (
+	);
+	Outlets = (
+	);
+	Super = NSWindow;
+    };
     GormFilePrefsManager = {
 	Actions = (
 	    "showIncompatibilities:",
